err/pysped.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PySPED-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysped'...
Listing './lib/python3.5/site-packages/pysped/cte'...
Listing './lib/python3.5/site-packages/pysped/cte/dacte'...
Listing './lib/python3.5/site-packages/pysped/cte/leiaute'...
Listing './lib/python3.5/site-packages/pysped/cte/leiaute/schema'...
Listing './lib/python3.5/site-packages/pysped/cte/leiaute/schema/PL_CTe_300'...
Listing './lib/python3.5/site-packages/pysped/cte/leiaute/schema/pl_104c'...
Listing './lib/python3.5/site-packages/pysped/ecd'...
Listing './lib/python3.5/site-packages/pysped/efd'...
Listing './lib/python3.5/site-packages/pysped/exemplos'...
Listing './lib/python3.5/site-packages/pysped/nf_paulista'...
Listing './lib/python3.5/site-packages/pysped/nfe'...
Listing './lib/python3.5/site-packages/pysped/nfe/danfe'...
Compiling './lib/python3.5/site-packages/pysped/nfe/danfe/danfepaisagem.py'...
***   File "./lib/python3.5/site-packages/pysped/nfe/danfe/danfepaisagem.py", line 85
    if generator._current_page_number <> 1:
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysped/nfe/danfe/fonts'...
Listing './lib/python3.5/site-packages/pysped/nfe/leiaute'...
Listing './lib/python3.5/site-packages/pysped/nfe/leiaute/schema'...
Listing './lib/python3.5/site-packages/pysped/nfe/leiaute/schema/pl_005f'...
Listing './lib/python3.5/site-packages/pysped/nfe/leiaute/schema/pl_006v'...
Listing './lib/python3.5/site-packages/pysped/nfe/leiaute/schema/pl_008i2'...
Listing './lib/python3.5/site-packages/pysped/nfe/manual_300'...
Listing './lib/python3.5/site-packages/pysped/nfe/manual_401'...
Listing './lib/python3.5/site-packages/pysped/relato_sped'...
Listing './lib/python3.5/site-packages/pysped/relato_sped/fonts'...
Listing './lib/python3.5/site-packages/pysped/xml_sped'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
